@@ -1,5 +1,10 @@
 2004-11-01  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: Added application/mathematica, patch by Chris
+	Maes <i-chris@wolfram.com>, fixes #870
+
+2004-11-01  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: Added application/x-chm, patch by Loic
 	Minier <lool+freedesktop@dooz.org>, fixes #794 
 
